# king_orch

./: .gitignore  .webui_secret_key  AGENTS.md  AGENT_CREATION_GUIDE.md  README.md  README_NODEJS.md  RULES.md  SACRED_FILES.md  add_model.bat  app.py  backend.py  base_agent.py  browser_agent.py  build.bat  build.cjs  build_active_tools.py  core_worker.py  deploy.ps1  drawflow_pretty.js  engine.py  environment.yml  generate_installer.bat  index.html  inspect_library.py  install_dependencies.py  installer.cjs  latest.json  main.py  mcp_browser_server.py  mcp_config.json  mcp_server.js  models_catalog.json  notes.md  package-lock.json  package.json  pnpm-lock.yaml  read_key.cjs  release.bat  release.cjs  requirements.txt  (+19 more)
agents/: base_agent.py  (+20 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/mcp_servers/: ast_analyzer.cjs  ast_treesitter.cjs  ddg_search.cjs  ddg_search.js  deno_runner.ts  docs_fetcher.cjs  docs_fetcher.js  filesystem.cjs  filesystem.js  fs_read.cjs  fs_write.cjs  local_rag.cjs  local_rag.js  markdown_section_reader.cjs  mcp_base.cjs  youtube_mcp.cjs  youtube_mcp.js
src-tauri/src/: agent_manager.rs  config.rs  domain.rs  downloader.rs  llm.rs  main.rs  mcp_client.rs  media_fetcher.rs  orchestrator.rs  parsers.rs  processor.rs  session_manager.rs  tool_executor.rs
src-tauri/src/api/: agents.rs  chat.rs  config.rs  graph.rs  mod.rs  models.rs  sessions.rs  test.rs
src-tauri/src/domain/: agent_manager.rs  mod.rs  parsers.rs
src-tauri/src/infra/: bin_downloader.rs  config.rs  downloader.rs  llm.rs  llm_gguf.rs  llm_multimodal.rs  llm_types.rs  mcp_client.rs  migration.rs  mod.rs  session_manager.rs
(+173 files in other folders)
