[package]
name = "king_orch"
version = "26.5.75"
description = "Local LLM Multi-Agent Studio"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[features]
default = ["mtmd"]
mtmd = ["llama-cpp-2/mtmd"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-updater = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
llama-cpp-2 = { version = "0.1.146", features = ["cuda", "mtmd"] }
regex = "1.10"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
minijinja = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"
sysinfo = "0.30.0"
nvml-wrapper = "0.10.0"
